Easy/EasyParser.py
# Generated from /home/lukas/Documents/kompilator/compiler/Easy.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class EasyParser ( Parser ):

    grammarFileName = "Easy.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "'||'", "'&&'", "'!'", "'<'", 
                     "'>'", "'=='", "'>='", "'<='", "'!='", "'+'", "'-'", 
                     "'/'", "'('", "')'", "'='", "'for'", "'from'", "'to'", 
                     "'by'", "'while'", "'if'", "'else'", "'break'", "'continue'", 
                     "'return'", "','", "'['", "']'", "'def'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'*'", "':'", "'int'", "'char'", "'bool'", 
                     "'str'", "'void'", "'del'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "NEWLINE", "COMMENT", "WHITESPACE", "NUMBER", "CHAR", 
                      "STRING", "POINTER", "DOUBE_DOT", "T_INT", "T_CHAR", 
                      "T_BOOL", "T_STR", "T_VOID", "DEL", "NAME" ]

    RULE_compileUnit = 0
    RULE_d_type = 1
    RULE_a_type = 2
    RULE_block = 3
    RULE_test = 4
    RULE_or_test = 5
    RULE_and_test = 6
    RULE_not_test = 7
    RULE_comparison = 8
    RULE_comp_op = 9
    RULE_expr = 10
    RULE_arith_expr = 11
    RULE_term = 12
    RULE_factor = 13
    RULE_access = 14
    RULE_default = 15
    RULE_creator = 16
    RULE_trailer = 17
    RULE_atom = 18
    RULE_stmt = 19
    RULE_s_stmt = 20
    RULE_expr_stmt = 21
    RULE_c_stmt = 22
    RULE_for_stmt = 23
    RULE_while_stmt = 24
    RULE_if_stmt = 25
    RULE_flow_stmt = 26
    RULE_break_stmt = 27
    RULE_continue_stmt = 28
    RULE_return_stmt = 29
    RULE_varargslist = 30
    RULE_argslist = 31
    RULE_parameters = 32
    RULE_varparameters = 33
    RULE_listparameters = 34
    RULE_funcdef = 35

    ruleNames =  [ "compileUnit", "d_type", "a_type", "block", "test", "or_test", 
                   "and_test", "not_test", "comparison", "comp_op", "expr", 
                   "arith_expr", "term", "factor", "access", "default", 
                   "creator", "trailer", "atom", "stmt", "s_stmt", "expr_stmt", 
                   "c_stmt", "for_stmt", "while_stmt", "if_stmt", "flow_stmt", 
                   "break_stmt", "continue_stmt", "return_stmt", "varargslist", 
                   "argslist", "parameters", "varparameters", "listparameters", 
                   "funcdef" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    NEWLINE=32
    COMMENT=33
    WHITESPACE=34
    NUMBER=35
    CHAR=36
    STRING=37
    POINTER=38
    DOUBE_DOT=39
    T_INT=40
    T_CHAR=41
    T_BOOL=42
    T_STR=43
    T_VOID=44
    DEL=45
    NAME=46

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CompileUnitContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcdef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EasyParser.FuncdefContext)
            else:
                return self.getTypedRuleContext(EasyParser.FuncdefContext,i)


        def getRuleIndex(self):
            return EasyParser.RULE_compileUnit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompileUnit" ):
                listener.enterCompileUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompileUnit" ):
                listener.exitCompileUnit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompileUnit" ):
                return visitor.visitCompileUnit(self)
            else:
                return visitor.visitChildren(self)




    def compileUnit(self):

        localctx = EasyParser.CompileUnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_compileUnit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==EasyParser.T__30:
                self.state = 72
                self.funcdef()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class D_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def T_INT(self):
            return self.getToken(EasyParser.T_INT, 0)

        def T_CHAR(self):
            return self.getToken(EasyParser.T_CHAR, 0)

        def T_BOOL(self):
            return self.getToken(EasyParser.T_BOOL, 0)

        def T_STR(self):
            return self.getToken(EasyParser.T_STR, 0)

        def T_VOID(self):
            return self.getToken(EasyParser.T_VOID, 0)

        def getRuleIndex(self):
            return EasyParser.RULE_d_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterD_type" ):
                listener.enterD_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitD_type" ):
                listener.exitD_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitD_type" ):
                return visitor.visitD_type(self)
            else:
                return visitor.visitChildren(self)




    def d_type(self):

        localctx = EasyParser.D_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_d_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << EasyParser.T_INT) | (1 << EasyParser.T_CHAR) | (1 << EasyParser.T_BOOL) | (1 << EasyParser.T_STR) | (1 << EasyParser.T_VOID))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class A_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def d_type(self):
            return self.getTypedRuleContext(EasyParser.D_typeContext,0)


        def POINTER(self, i:int=None):
            if i is None:
                return self.getTokens(EasyParser.POINTER)
            else:
                return self.getToken(EasyParser.POINTER, i)

        def getRuleIndex(self):
            return EasyParser.RULE_a_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterA_type" ):
                listener.enterA_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitA_type" ):
                listener.exitA_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitA_type" ):
                return visitor.visitA_type(self)
            else:
                return visitor.visitChildren(self)




    def a_type(self):

        localctx = EasyParser.A_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_a_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.d_type()
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==EasyParser.POINTER:
                self.state = 81
                self.match(EasyParser.POINTER)
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EasyParser.StmtContext)
            else:
                return self.getTypedRuleContext(EasyParser.StmtContext,i)


        def getRuleIndex(self):
            return EasyParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = EasyParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(EasyParser.T__0)
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << EasyParser.T__17) | (1 << EasyParser.T__21) | (1 << EasyParser.T__22) | (1 << EasyParser.T__24) | (1 << EasyParser.T__25) | (1 << EasyParser.T__26) | (1 << EasyParser.T__30) | (1 << EasyParser.DEL) | (1 << EasyParser.NAME))) != 0):
                self.state = 88
                self.stmt()
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 94
            self.match(EasyParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TestContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def or_test(self):
            return self.getTypedRuleContext(EasyParser.Or_testContext,0)


        def getRuleIndex(self):
            return EasyParser.RULE_test

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTest" ):
                listener.enterTest(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTest" ):
                listener.exitTest(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTest" ):
                return visitor.visitTest(self)
            else:
                return visitor.visitChildren(self)




    def test(self):

        localctx = EasyParser.TestContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_test)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.or_test()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Or_testContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def and_test(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EasyParser.And_testContext)
            else:
                return self.getTypedRuleContext(EasyParser.And_testContext,i)


        def getRuleIndex(self):
            return EasyParser.RULE_or_test

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOr_test" ):
                listener.enterOr_test(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOr_test" ):
                listener.exitOr_test(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOr_test" ):
                return visitor.visitOr_test(self)
            else:
                return visitor.visitChildren(self)




    def or_test(self):

        localctx = EasyParser.Or_testContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_or_test)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.and_test()
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==EasyParser.T__2:
                self.state = 99
                self.match(EasyParser.T__2)
                self.state = 100
                self.and_test()
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class And_testContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def not_test(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EasyParser.Not_testContext)
            else:
                return self.getTypedRuleContext(EasyParser.Not_testContext,i)


        def getRuleIndex(self):
            return EasyParser.RULE_and_test

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnd_test" ):
                listener.enterAnd_test(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnd_test" ):
                listener.exitAnd_test(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAnd_test" ):
                return visitor.visitAnd_test(self)
            else:
                return visitor.visitChildren(self)




    def and_test(self):

        localctx = EasyParser.And_testContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_and_test)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.not_test()
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==EasyParser.T__3:
                self.state = 107
                self.match(EasyParser.T__3)
                self.state = 108
                self.not_test()
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Not_testContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def not_test(self):
            return self.getTypedRuleContext(EasyParser.Not_testContext,0)


        def comparison(self):
            return self.getTypedRuleContext(EasyParser.ComparisonContext,0)


        def getRuleIndex(self):
            return EasyParser.RULE_not_test

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNot_test" ):
                listener.enterNot_test(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNot_test" ):
                listener.exitNot_test(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNot_test" ):
                return visitor.visitNot_test(self)
            else:
                return visitor.visitChildren(self)




    def not_test(self):

        localctx = EasyParser.Not_testContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_not_test)
        try:
            self.state = 117
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [EasyParser.T__4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 114
                self.match(EasyParser.T__4)
                self.state = 115
                self.not_test()
                pass
            elif token in [EasyParser.T__12, EasyParser.T__14, EasyParser.NUMBER, EasyParser.CHAR, EasyParser.STRING, EasyParser.NAME]:
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.comparison()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComparisonContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EasyParser.ExprContext)
            else:
                return self.getTypedRuleContext(EasyParser.ExprContext,i)


        def comp_op(self):
            return self.getTypedRuleContext(EasyParser.Comp_opContext,0)


        def getRuleIndex(self):
            return EasyParser.RULE_comparison

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparison" ):
                listener.enterComparison(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparison" ):
                listener.exitComparison(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComparison" ):
                return visitor.visitComparison(self)
            else:
                return visitor.visitChildren(self)




    def comparison(self):

        localctx = EasyParser.ComparisonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_comparison)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.expr()
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << EasyParser.T__5) | (1 << EasyParser.T__6) | (1 << EasyParser.T__7) | (1 << EasyParser.T__8) | (1 << EasyParser.T__9) | (1 << EasyParser.T__10))) != 0):
                self.state = 120
                self.comp_op()
                self.state = 121
                self.expr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Comp_opContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return EasyParser.RULE_comp_op

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComp_op" ):
                listener.enterComp_op(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComp_op" ):
                listener.exitComp_op(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComp_op" ):
                return visitor.visitComp_op(self)
            else:
                return visitor.visitChildren(self)




    def comp_op(self):

        localctx = EasyParser.Comp_opContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_comp_op)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << EasyParser.T__5) | (1 << EasyParser.T__6) | (1 << EasyParser.T__7) | (1 << EasyParser.T__8) | (1 << EasyParser.T__9) | (1 << EasyParser.T__10))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arith_expr(self):
            return self.getTypedRuleContext(EasyParser.Arith_exprContext,0)


        def getRuleIndex(self):
            return EasyParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = EasyParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.arith_expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Arith_exprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EasyParser.TermContext)
            else:
                return self.getTypedRuleContext(EasyParser.TermContext,i)


        def getRuleIndex(self):
            return EasyParser.RULE_arith_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArith_expr" ):
                listener.enterArith_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArith_expr" ):
                listener.exitArith_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArith_expr" ):
                return visitor.visitArith_expr(self)
            else:
                return visitor.visitChildren(self)




    def arith_expr(self):

        localctx = EasyParser.Arith_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_arith_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.term()
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==EasyParser.T__11 or _la==EasyParser.T__12:
                self.state = 130
                _la = self._input.LA(1)
                if not(_la==EasyParser.T__11 or _la==EasyParser.T__12):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 131
                self.term()
                self.state = 136
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EasyParser.FactorContext)
            else:
                return self.getTypedRuleContext(EasyParser.FactorContext,i)


        def POINTER(self, i:int=None):
            if i is None:
                return self.getTokens(EasyParser.POINTER)
            else:
                return self.getToken(EasyParser.POINTER, i)

        def getRuleIndex(self):
            return EasyParser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerm" ):
                return visitor.visitTerm(self)
            else:
                return visitor.visitChildren(self)




    def term(self):

        localctx = EasyParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_term)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.factor()
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==EasyParser.T__13 or _la==EasyParser.POINTER:
                self.state = 138
                _la = self._input.LA(1)
                if not(_la==EasyParser.T__13 or _la==EasyParser.POINTER):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 139
                self.factor()
                self.state = 144
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FactorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def creator(self):
            return self.getTypedRuleContext(EasyParser.CreatorContext,0)


        def getRuleIndex(self):
            return EasyParser.RULE_factor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFactor" ):
                listener.enterFactor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFactor" ):
                listener.exitFactor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFactor" ):
                return visitor.visitFactor(self)
            else:
                return visitor.visitChildren(self)




    def factor(self):

        localctx = EasyParser.FactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_factor)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==EasyParser.T__12:
                self.state = 145
                self.match(EasyParser.T__12)


            self.state = 148
            self.creator()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AccessContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(EasyParser.NAME, 0)

        def trailer(self):
            return self.getTypedRuleContext(EasyParser.TrailerContext,0)


        def default(self):
            return self.getTypedRuleContext(EasyParser.DefaultContext,0)


        def getRuleIndex(self):
            return EasyParser.RULE_access

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAccess" ):
                listener.enterAccess(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAccess" ):
                listener.exitAccess(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAccess" ):
                return visitor.visitAccess(self)
            else:
                return visitor.visitChildren(self)




    def access(self):

        localctx = EasyParser.AccessContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_access)
        try:
            self.state = 153
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 150
                self.match(EasyParser.NAME)
                self.state = 151
                self.trailer()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 152
                self.default()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefaultContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(EasyParser.NAME, 0)

        def NUMBER(self):
            return self.getToken(EasyParser.NUMBER, 0)

        def CHAR(self):
            return self.getToken(EasyParser.CHAR, 0)

        def STRING(self):
            return self.getToken(EasyParser.STRING, 0)

        def getRuleIndex(self):
            return EasyParser.RULE_default

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefault" ):
                listener.enterDefault(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefault" ):
                listener.exitDefault(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefault" ):
                return visitor.visitDefault(self)
            else:
                return visitor.visitChildren(self)




    def default(self):
